Fix goal header spacing on minimize

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -122,6 +122,9 @@ p.not_at_top_count {
   width: 4ch;
   font-size: 30px;
   text-align: center;
+}
+
+div.not_at_top_input {
   margin-bottom: 10px;
 }
 
